--- a/public/index.html
+++ b/public/index.html
@@ -148,21 +148,25 @@
             <p class="my-5">
               I'm a computer science student pursuing a double major in CS and Math at the
               <strong>University of North Carolina at Chapel Hill</strong>. You can find my resume
-              <a class="text-blue-500 underline underline-offset-2" href="assets/farhan_sanukri_resume.pdf">here</a>.
+              <a
+                class="text-blue-500 underline underline-offset-2"
+                href="assets/farhan_sanukri_resume.pdf"
+                >here</a
+              >.
             </p>
             <p class="my-5">
               My interests are in distributed systems, compiler optimizations, and database design.
-              Outside of that, I'm passionate about full-stack development, having worked on both
-              mobile platforms and the web.
+              Outside of that, I'm passionate about full-stack development and creating
+              <span class="underline">scalable, intuitive digital experiences.</span>
             </p>
             <p class="my-5">
-              I also do work as a software developer with App Team Carolina, building the iOS app
-              for PORCH Communities to make food donation easier. Previously, I researched
+              I'm currently building the iOS app for <strong>PORCH Communities</strong> to make
+              large-scale food donation easier and more user-friendly. Previously, I researched
               meniscus-tear image classification at <strong>Duke University</strong>.
             </p>
             <p class="my-5">
-              When I'm not playing Hay Day or spending time outside, I also like to write about code
-              (and other things) sometimes; my
+              When I'm not playing Hay Day or spending time outside, I also like to write code (and
+              other things) sometimes; my
               <a class="text-blue-500 underline underline-offset-2" href="/blog">blog</a> and
               <a class="text-blue-500 underline underline-offset-2" href="/projects">projects</a>
               are where those live.
