--- a/src/now/index.html
+++ b/src/now/index.html
@@ -98,6 +98,7 @@
             <p class="text-slate-600">(created on May 07, 2025)</p>
           </div>
 
+		<div class="flex flex-col gap-8">
           <div class="pl-1">
             <h2 class="now-date-header">May 10, 2025</h2>
             <div>
