--- a/content/index.html
+++ b/content/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/assets/styles.css" />
-    <link rel="icon" type="image/png" href="/assets/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/png" href="/assets/favicon-96x96.png" sizes="96x96"/>
     <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg" />
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png" />
     <link
@@ -34,180 +34,12 @@
     <title>Farhan Sanukri</title>
   </head>
   <body>
-    <div class="page-shell">
-      <div class="main-col">
-        <div class="flex flex-col justify-center gap-6 md:flex-row md:gap-16">
-          <div class="flex flex-col gap-0 md:gap-6 -mx-8 -mt-8 p-8 pb-0 md:p-0 md:mx-0 md:mt-0">
-            <div class="items-top flex md:w-[152px] md:flex-col md:gap-0">
-              <a href="/">
-                <svg
-                  viewBox="0 0 100 100"
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="hidden md:block mb-4 md:h-[120px] md:w-[120px]"
-                >
-                  <defs>
-                    <filter id="noise" x="-30%" y="-30%" width="160%" height="160%">
-                      <feTurbulence
-                        type="fractalNoise"
-                        baseFrequency="0.12"
-                        numOctaves="6"
-                        seed="2"
-                        result="turb"
-                      ></feTurbulence>
-                      <feDisplacementMap
-                        in="SourceGraphic"
-                        in2="turb"
-                        scale="12"
-                        xChannelSelector="R"
-                        yChannelSelector="G"
-                      ></feDisplacementMap>
-                    </filter>
-                  </defs>
-
-                  <g filter="url(#noise)">
-                    <circle cx="50" cy="50" r="50" class="fill-green-600"></circle>
-                    <circle cx="50" cy="50" r="40" class="fill-lime-500"></circle>
-                    <circle cx="50" cy="50" r="30" class="fill-yellow-400"></circle>
-                    <circle cx="50" cy="50" r="20" class="fill-amber-100"></circle>
-                    <circle cx="50" cy="50" r="10" class="fill-red-300"></circle>
-                  </g>
-                </svg>
-              </a>
-              <div class="xs:mb-0 mt-2 mb-4 flex flex-col gap-0 md:mt-0">
-                <h1
-                  class="xs:mt-0 mt-2 text-[1.6em] leading-none font-bold whitespace-nowrap sm:whitespace-normal md:text-3xl"
-                >
-                  FARHAN SANUKRI
-                </h1>
-                <p class="text-lg md:text-[1.2em] italic md:my-1">cs, math @ UNC</p>
-                <nav class="xs:flex hidden flex-row gap-1 sm:my-1 sm:gap-1.5">
-                  <a href="https://github.com/sanufar">
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      viewBox="0 0 24 24"
-                      fill="none"
-                      class="header-icon"
-                      stroke="currentColor"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                    >
-                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                      <path
-                        d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5"
-                      ></path>
-                    </svg>
-                  </a>
-                  <a href="https://linkedin.com/in/farhan-sanukri">
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      class="header-icon"
-                      viewBox="0 0 24 24"
-                      fill="none"
-                      stroke="currentColor"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                    >
-                      <path
-                        d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"
-                      ></path>
-                      <rect x="2" y="9" width="4" height="12"></rect>
-                      <circle cx="4" cy="4" r="2"></circle>
-                    </svg>
-                  </a>
-                  <a href="mailto:farhan.sanukri24@gmail.com">
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      class="header-icon"
-                      viewBox="0 0 24 24"
-                      fill="none"
-                      stroke="currentColor"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                    >
-                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                      <path d="M3 9l9 6l9 -6l-9 -6l-9 6"></path>
-                      <path d="M21 9v10a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-10"></path>
-                      <path d="M3 19l6 -6"></path>
-                      <path d="M15 13l6 6"></path>
-                    </svg>
-                  </a>
-                </nav>
-              </div>
-            </div>
-
-            <nav
-              class="justify-end md:justify-start flex gap-x-3 mt-6 md:mt-1 flex-wrap gap-1 -mx-8 px-8"
-            >
-              <a href="/blog" class="nav-item">
-                <svg class="nav-square fill-green-600/60" viewBox="0 0 10 10">
-                  <rect width="10" height="10" rx="2"></rect>
-                </svg>
-                <span class="hover:underline hover:decoration-3;">BLOG</span>
-                <span class="ml-auto text-green-600/90 text-sm md:hidden">[↗]</span>
-              </a>
-              <a href="/projects" class="nav-item">
-                <svg class="nav-square fill-lime-500/60" viewBox="0 0 10 10">
-                  <rect width="10" height="10" rx="2"></rect>
-                </svg>
-                <span class="hover:underline hover:decoration-3;">PROJECTS</span>
-                <span class="ml-auto md:hidden text-lime-500/90 text-sm">[↗]</span>
-              </a>
-              <a href="/now" class="nav-item">
-                <svg class="nav-square fill-yellow-400/60" viewBox="0 0 10 10">
-                  <rect width="10" height="10" rx="2"></rect>
-                </svg>
-                <span class="hover:underline hover:decoration-3;">NOW</span>
-                <span class="ml-auto md:hidden text-yellow-500/90 text-sm">[↗]</span>
-              </a>
-              <a href="/linkroll" class="nav-item">
-                <svg class="nav-square fill-red-400/60" viewBox="0 0 10 10">
-                  <rect width="10" height="10" rx="2"></rect>
-                </svg>
-                <span class="hover:underline hover:decoration-3;">LINKS</span>
-                <span class="ml-auto md:hidden text-red-500/90 text-sm">[↗]</span>
-              </a>
-            </nav>
-          </div>
-          <div class="stagger md:my-6 md:text-lg">
-            <p>Hi, I'm Farhan!</p>
-            <p class="my-4">
-              I'm a computer science student pursuing a double major in CS and Math at the
-              <span class="font-semibold">University of North Carolina at Chapel Hill</span>. You can find my resume
-              <a class="link" href="assets/farhan_sanukri_resume.pdf">here</a>.
-            </p>
-            <p class="my-4">
-              My interests are in distributed systems, compiler optimizations, and database design.
-              Outside of that, I'm passionate about full-stack development and creating
-              <span class="underline">scalable, intuitive digital experiences.</span>
-            </p>
-            <p class="my-4">
-              I'm currently building the iOS app for <span class="font-semibold">PORCH Communities</span> to make
-              large-scale food donation easier and more user-friendly. Previously, I researched
-              meniscus-tear image classification at <span class="font-semibold">Duke University</span>.
-            </p>
-            <p class="my-4">
-              When I'm not playing Hay Day or spending time outside, I also like to write code (and
-              other things) sometimes; my
-              <a class="link" href="/blog">blog</a> and
-              <a class="link" href="/projects">projects</a>
-              are where those live.
-            </p>
-            <p class="my-5">
-              Feel free to get in touch! My email is <br /><em class="underline underline-offset-2"
-                >farhan.sanukri24 [at] gmail [dot] com.</em
-              >
-            </p>
-          </div>
-        </div>
-      </div>
-      <footer class="flex pb-3">
-        <span class="m-auto mb-1 px-2 py-1 text-sm select-none md:mb-0"
-          >© 2025 Farhan Sanukri.</span
-        >
-      </footer>
-    </div>
+    <p>Hi!</p>
+    <p>Hi!</p>
+    <p>Wow, this is so cool. I get to iterate super fast!</p>
+    <p>Great! So now I can get to work on doing stuff.</p>
+	<p>Like actually decently fast hopefully!</p>
+	<p>Okay, that's actually pretty decent.</p>
+	<p class="text-zinc-400">La la la la la al alla</p>
   </body>
 </html>
